--- a/src/scss/blocks/body.scss
+++ b/src/scss/blocks/body.scss
@@ -2,5 +2,10 @@ html {
   scroll-behavior: smooth;
 }
 body {
+  margin: 0;
+  background-color: #fff9ee;
+  color: #3c392d;
   font-family: sans-serif;
+  text-align: center;
+  position: relative;
 }
