--- a/src/scss/blocks/titles.scss
+++ b/src/scss/blocks/titles.scss
@@ -2,13 +2,14 @@
 .title {
   font-family: 'Alfa Slab One', serif;
   font-weight: 400;
-  font-size: 25px;
+  font-size: 20px;
   line-height: 34px;
   letter-spacing: 1%;
   position: relative;
-  top: 180px;
+  top: 190px;
   @include responsive(laptop) {
     top: 50px;
+    font-size: 25px;
   }
 }
 
@@ -28,14 +29,20 @@
 }
 
 .wordline {
-  font-size: 2rem;
+  font-size: 1.2rem;
   color: #6b5e48;
+  @include responsive(laptop) {
+    font-size: 1.5rem;
+  }
 
   &--letter {
     font-family: 'Inter', sans-serif;
     font-weight: 700;
-    font-size: 33px;
+    font-size: 1.5rem;
     line-height: 41px;
     color: #6b5e48;
+    @include responsive(laptop) {
+      font-size: 2.05rem;
+    }
   }
 }
