--- a/src/scss/blocks/titles.scss
+++ b/src/scss/blocks/titles.scss
@@ -18,6 +18,9 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 15.52px;
+  @include responsive(laptop) {
+    font-size: 18px;
+  }
 }
 
 .button--title {
